--- a/views/Users.ejs
+++ b/views/Users.ejs
@@ -147,6 +147,7 @@
     </div>
   </div>
 
+  <img src="" alt="" srcset="">
   <script>
 
     addEventListener("DOMContentLoaded", async (e) => {
@@ -165,6 +166,7 @@
               <td>${user.first_name + " " + user.last_name}</td>
               <td>${user.email}</td>
               <td>${user.company_id.name}</td>
+              <td>  <img src="" alt="" srcset="" ${user.resume} > </td>
                <td> 
         <a href="/uploads/${user.resume}" target="_blank" class="btn btn-sm btn-danger">
           View Resume
